# rust-example

./: .gitignore  README.md
abst_type/: Cargo.toml
abst_type/src/: car.rs  main.rs  media.rs
array/src/: main.rs
complex/: README.md
complex/src/: lib.rs
complex/tests/: complex_test.rs
counter/: words.txt
counter/src/: main.rs
crates/cerde-demo/: Cargo.toml
crates/cerde-demo/src/: main.rs
crates/mysql-demo/: .env  Cargo.toml  README.md
crates/mysql-demo/src/: main.rs  models.rs  schema.rs
crates/web/axum-api/: Cargo.toml  Dockerfile
crates/web/axum-api/src/: main.rs
enums/src/: main.rs
generic/src/: main.rs
hashmap/src/: main.rs
instace/: Cargo.toml
instace/src/: main.rs
loops/src/: main.rs
module/: README.md
module/src/: foo.rs  main.rs
module/src/user/: student.rs
trait_scope/: Cargo.toml  README.md
trait_scope/src/: animal.rs  fruit.rs  main.rs
workspace/: Cargo.toml  README.md
workspace/app/: Cargo.toml
workspace/app/src/: main.rs
workspace/sum_crate/: Cargo.toml
workspace/sum_crate/src/: lib.rs
