[package]
name = "axum-api"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.5.5"
tokio = { version = "1.18.2", features = ["full"] }
serde = { version = "1.0.137",  features = ["derive"] }
